Fix Java 25 BigInteger sidecar crash